--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <section>
             <div class="image">
-                <img src="GoogleLogo.png" alt="Logo">
+                <!-- <img src="GoogleLogo.png" alt="Logo"> -->
             </div>
             <div class="search-bar">
                 <form action="https://google.com/search">
@@ -23,7 +23,10 @@
                     </div>                    
                     <div>
                         <input class="button" type="submit" value="Google Search">
-                        <input class="button" type="submit" value="I'm Feeling Lucky">
+                        <input class="button" type="submit" name="btnI" value="I'm Feeling Lucky">
+                    </div>
+                    <div>
+                        
                     </div>
                     
                 </form>
