Added Images Search

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             </div>      
         </header>
         <section>
-            <div class="image">
-                <!-- <img src="GoogleLogo.png" alt="Logo"> -->
-            </div>
+            <div class="image"></div>
             <div class="search-bar">
                 <form action="https://google.com/search">
                     <div class="text-bar">
