--- a/images.html
+++ b/images.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Google</title>
+        <title>Google Images</title>
+        <link rel="icon" href="https://www.google.com/favicon.ico">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
