--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Google</title>
+        <link rel="icon" href="https://www.google.com/favicon.ico">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
