--- a/advanced.html
+++ b/advanced.html
@@ -8,9 +8,9 @@
     <body>
         <header>
             <div class="header-adv">
-                <!-- <div>
+                <div>
                     <img id="SmallLogo" src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg" alt="LogoSmall">
-                </div> -->
+                </div>
                 <div class="links-adv">                
                     <a class="nav-links" href="index.html">Back to Google search</a>
                     <a class="nav-links" href="images.html">Image Search</a>
