--- a/images.html
+++ b/images.html
@@ -9,7 +9,7 @@
         <header>
             <div class="header">
                 <a class="nav-links" href="index.html">Back to Google search</a>
-                <a class="nav-links" href="advanced.html">Advanced Search</a>
+                <a class="nav-links" href="adv-search.html">Advanced Search</a>
             </div>      
         </header>
         <section>
