--- a/advanced.html
+++ b/advanced.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header>
+        <div>
             <div class="header-adv">
                 <div>
                     <img id="SmallLogo" src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg" alt="LogoSmall">
@@ -19,7 +19,7 @@
             <div class="label">
                 <label style="padding-left: 10px;">Advanced Search</label>
             </div>
-        </header>
+        </div>
         <section>
             <div class="forms-div">
                 <form action="https://www.google.com/search">
