--- a/advanced.html
+++ b/advanced.html
@@ -8,8 +8,8 @@
     <body>
         <section>
             <div class="header-adv">
-                <div>
-                    <img id="SmallLogo" src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg" alt="LogoSmall">
+                <div class="div-logo">
+                    <img class="SmallLogo" src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_clr_74x24px.svg" alt="LogoSmall">
                 </div>
                 <div class="links-adv">                
                     <a class="nav-links" href="index.html">Back to Google search</a>
