--- a/advanced.html
+++ b/advanced.html
@@ -22,7 +22,7 @@
         </section>
         <section>
             <div class="forms-div">
-                <form action="https://www.google.com/search">
+                <form action="https://www.google.com/search" autocomplete="off">
                     <div class="first-div">
                         <div class="div-adv-11">
                             <div class="adv-11">
